Update authentication flow to support login/register